--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@
 	<nav>
 		<ul>
 			<li><a href="Home">Home</a></li>
-			<li><a href="About us">About us</a></li>
-			<li><a href="Contact us">Contact us</a></li>
+			<li><a href="About">About us</a></li>
+			<li><a href="Contact">Contact us</a></li>
 		</ul>
 	</nav>
 	<section>
-		<h1>3random image</h1>
+		<h1>3 random image</h1>
 		<img src="https://picsum.photos/id/123/200/300" alt="Random image" />
         <img src="https://picsum.photos/id/124/200/300" alt="Random image"/>
 		<img src="https://picsum.photos/id/124/200/300" alt="Random image" />
