--- a/main.html
+++ b/main.html
@@ -17,9 +17,9 @@
 	</nav>
 	<section>
 		<h1>3 random image</h1>
-		<img src="https://picsum.photos/id/123/200/300" alt="Random image" />
-        <img src="https://picsum.photos/id/124/200/300" alt="Random image"/>
-		<img src="https://picsum.photos/id/124/200/300" alt="Random image" />
+		<img src="https://picsum.photos/id/123/200/300" alt="Random image" >
+        <img src="https://picsum.photos/id/124/200/300" alt="Random image">
+		<img src="https://picsum.photos/id/124/200/300" alt="Random image" >
 		
 	</section>
     <script type="text/javascript" src="./script.js">
