--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
 	<nav>
 		<ul>
-			<li><a href="Home">Home</a></li>
-			<li><a href="About">About us</a></li>
-			<li><a href="Contact">Contact us</a></li>
+			<li><a href="#Home">Home</a></li>
+			<li><a href="#About">About us</a></li>
+			<li><a href="#Contact">Contact us</a></li>
 		</ul>
 	</nav>
 	<section>
